--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Briana Li, Designer & Web Developer
+title: Briana Li, Designer and Web Developer
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Briana Li!</h1>
